syntax = "proto3";
package penumbra.crypto;

message Address {
    bytes inner = 1;
}

message NoteCommitment {
    bytes inner = 1;
}

message AssetId {
    bytes inner = 1;
}

message Value {
    uint64 amount = 1;
    AssetId asset_id = 2;
}
